<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Support</string>
    <string name="menu_settings">Settings</string>
    <string name="get_support">Get Support</string>
    <string name="title_activity_support">SupportActivity</string>
    <string name="submit">Submit</string>
    <string name="title_support">Support</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="comments">Comments</string>

</resources>